--- a/packages/storybook-html/src/components/table/table-card.html
+++ b/packages/storybook-html/src/components/table/table-card.html
@@ -1,21 +1,21 @@
 <h3>Table - Grid</h3>
-<table class="uq-table uq-table--grid">
+<table class="uq-table uq-table--card">
     <caption>Types of food and ratings</caption>
     <thead>
         <tr>
-            <th scope="col">Type of Food</th>
-            <th scope="col">Calories</th>
-            <th scope="col">Tasty Factor</th>
-            <th scope="col">Average Price</th>
-            <th scope="col">Rarity</th>
-            <th scope="col">Average Rating</th>
+            <th>Type of Food</th>
+            <th>Calories</th>
+            <th>Tasty Factor</th>
+            <th>Average Price</th>
+            <th>Rarity</th>
+            <th>Average Rating</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td data-title="Type of Food">Slice of Pizza</td>
             <td data-title="Calories">450</td>
-            <td data-title="Tasty Factor">95%</td>
+            <td data-title="Tasty Factor" class="text--right">95%</td>
             <td data-title="Average Price">$5.00</td>
             <td data-title="Rarity">Common</td>
             <td data-title="Average Rating">8/10</td>
