--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -4,12 +4,12 @@
         <caption>Types of food and ratings</caption>
         <thead>
             <tr>
-                <th scope="col">Type of Food</th>
-                <th scope="col">Calories</th>
-                <th scope="col">Tasty Factor</th>
-                <th scope="col">Average Price</th>
-                <th scope="col">Rarity</th>
-                <th scope="col">Average Rating</th>
+                <th>Type of Food</th>
+                <th>Calories</th>
+                <th>Tasty Factor</th>
+                <th>Average Price</th>
+                <th>Rarity</th>
+                <th>Average Rating</th>
             </tr>
         </thead>
         <tbody>
@@ -42,12 +42,12 @@
       <caption class="uq-table__caption">Types of food and ratings</caption>
       <thead class="uq-table__head">
           <tr class="uq-table__row">
-              <th scope="col" class="uq-table__header">Type of Food</th>
-              <th scope="col" class="uq-table__header">Calories</th>
-              <th scope="col" class="uq-table__header">Tasty Factor</th>
-              <th scope="col" class="uq-table__header">Average Price</th>
-              <th scope="col" class="uq-table__header">Rarity</th>
-              <th scope="col" class="uq-table__header">Average Rating</th>
+              <th class="uq-table__header">Type of Food</th>
+              <th class="uq-table__header">Calories</th>
+              <th class="uq-table__header">Tasty Factor</th>
+              <th class="uq-table__header">Average Price</th>
+              <th class="uq-table__header">Rarity</th>
+              <th class="uq-table__header">Average Rating</th>
           </tr>
       </thead>
       <tbody class="uq-table__body">
