--- a/packages/storybook-html/src/components/table/table-card.html
+++ b/packages/storybook-html/src/components/table/table-card.html
@@ -1,4 +1,4 @@
-<h3>Table - Grid</h3>
+<h3>Table - Card</h3>
 <table class="uq-table uq-table--card">
     <caption>Types of food and ratings</caption>
     <thead>
@@ -15,7 +15,7 @@
         <tr>
             <td data-title="Type of Food">Slice of Pizza</td>
             <td data-title="Calories">450</td>
-            <td data-title="Tasty Factor" class="text--right">95%</td>
+            <td data-title="Tasty Factor">95%</td>
             <td data-title="Average Price">$5.00</td>
             <td data-title="Rarity">Common</td>
             <td data-title="Average Rating">8/10</td>
