--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -21,13 +21,13 @@
 %card,
 .card {
   background-color: $uq-white;
-  margin-bottom: 1.5rem;
+  margin-bottom: $space-md;
   position: relative;
   overflow-wrap: break-word;
   word-wrap: break-word;
 
   &__wrapper {
-    margin-bottom: 1.5rem;
+    margin-bottom: $space-md;
   }
 
   &__header {
@@ -44,13 +44,13 @@
     }
     .card__link {
       display: block;
-      padding: 1rem 1.8rem 1rem 1rem;
+      padding: $space $space-lg $space $space; //1rem 1.8rem 1rem 1rem
       position: relative;
 
       &::after {
         @include fa-icon;
         content: $fa-var-angle-right;
-        margin-top: -.5rem;
+        margin-top: -$space-sm;
         opacity: .5;
         position: absolute;
         right: 1rem;
@@ -71,7 +71,7 @@
   }
 
   &__content {
-    padding: 1rem;
+    padding: $space;
   }
 
   // Force image heights to be the same for cards sitting next to each other.
@@ -98,7 +98,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.2;
-    margin-bottom: .5rem;
+    margin-bottom: $space-sm;
     transition: all ease .35s;
 
     // Stop system generated divs forcing link to behave as a block element.
@@ -115,7 +115,7 @@
     &::before {
       @include fa-icon;
       content: $fa-var-map-marker;
-      margin-right: .5rem;
+      margin-right: $space-sm;
     }
   }
 
@@ -165,8 +165,8 @@
 
     .card__footer {
       background: rgba($uq-black, .4);
-      bottom: 0;
-      left: 0;
+      bottom: $space-none;
+      left: $space-none;
       position: absolute;
       text-align: left;
       width: 100%;
@@ -185,7 +185,7 @@
     }
 
     .card__title {
-      margin-bottom: 0;
+      margin-bottom: $space-none;
 
       @media #{$large-up} {
         text-shadow: 0 1px 1px rgba($uq-black, .4);
@@ -200,9 +200,9 @@
           display: table;
           font-size: 1rem;
           font-weight: 500;
-          margin: .7rem auto 0;
+          margin: $space $space-auto $space-none; //.7rem auto 0
           opacity: 0;
-          padding: .3rem 1.2rem;
+          padding: $space-sm $space; //.3rem 1.2rem;
           text-transform: uppercase;
           transition: all ease .35s;
           visibility: hidden;
@@ -225,7 +225,7 @@
   // Primary link.
   &__primary-link {
     display: inline-block;
-    margin-bottom: 1.5rem;
+    margin-bottom: $space-md;
 
     &:hover,
     &:focus {
@@ -334,7 +334,7 @@
 
   // Horizontal layout.
   &--horizontal {
-    margin-bottom: 1.5rem;
+    margin-bottom: $space-md;
     overflow-y: auto;
 
     @media #{$medium-up} {
@@ -345,7 +345,7 @@
       @media #{$medium-up} {
         display: table-cell;
         height: 18rem;
-        padding-left: 2rem;
+        padding-left: $space-lg;
         vertical-align: middle;
         width: 50%;
       }
@@ -409,13 +409,13 @@
     .row {
       & > .column,
       & > .columns {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: $space-none;
+        padding-right: $space-none;
       }
     }
 
     .card {
-      margin-bottom: 0;
+      margin-bottom: $space-none;
     }
   }
 }
