Remove flex , add class uq-table, review amends

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -308,7 +308,7 @@ $use-encapsulation: false !default;
   .scroll-container {
     @include table.table-wrapper;
   }
-  table {
+.uq-table {
     @include table.table;
 
     caption {
