--- a/packages/storybook-html/src/components/table/table-irregular-headers.html
+++ b/packages/storybook-html/src/components/table/table-irregular-headers.html
@@ -1,6 +1,6 @@
 <h3>Table - Irregular Headers</h3>
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <col>
         <colgroup span="2"></colgroup>
