--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -1,6 +1,6 @@
 <h3>Table - Basic tags with minimal classes</h3>
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <thead>
             <tr>
